fixed timelines, scroll overflow stopped, framework down

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+html{
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
+  overflow: auto;
+  height: 100%;
   background-color: #2A454B;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,9 +16,14 @@ body {
 }
 
 footer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;  
+  background-color: #b7b6c1;
   text-align: center;
   margin-top: 50px;
-  padding: 10px;
+  padding: 20px;
   font-family: 'Lato', sans-serif;
   bottom: 0;
 }
@@ -19,4 +31,64 @@ footer {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.footer-social-links{
+  font-size: 14px;
+text-align: center;
+}
+.footer-social-links a{
+  width: 25px;
+  height: 25px;
+  line-height: 25px !important;
+  position: relative;
+  margin: 10px;
+  text-align: center;
+  display: inline-block;
+  color: #111;
+  
+  -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);  
+  -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+  -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+}
+.footer-social-links a i,
+.footer-social-links a span{
+  position: relative;
+  top: 2px;
+  left: 1px; 
+}
+.footer-social-links a:before{
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 1px solid #111;
+  
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  
+  -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);  
+  -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+  -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+  
+}
+.footer-social-links a:hover{
+  color: #fff;
+}
+.footer-social-links a:hover:before{
+  background: #111;
 }
