--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -3,6 +3,11 @@
 
 // Timeline
 $timeline-color: #94958B;
+.heading-timeline{
+    text-align: left;
+	margin-left: 5vw;
+    margin-top: 4vh;
+}
 
 #timeline {
 	line-height: 1.5em;
